--- a/login/login.html
+++ b/login/login.html
@@ -16,10 +16,10 @@
 				<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a> -->
 				<img src="login_icon.jpeg">
 			</div>
-			<input type="text" placeholder="Nome completo" />
-			<input type="email" placeholder="Endereço de email" />
+			<input type="text" id="nomeCompleto" placeholder="Nome completo" />
+			<input type="email" id="enderecoEmail" placeholder="Endereço de email" />
 			<input type="password" placeholder="Senha (pelo menos 8 dígitos)" />
-			<button>Cadastrar</button>
+			<button id="cadastro">Cadastrar</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
