--- a/login/login.html
+++ b/login/login.html
@@ -17,7 +17,7 @@
 			</div>
 			<input type="text" id="nomeCompleto" placeholder="Nome completo" />
 			<input type="email" id="enderecoEmail" placeholder="Endereço de email" />
-			<input type="password" placeholder="Senha (pelo menos 8 dígitos)" />
+			<input type="password" placeholder="Senha (pelo menos 8 dígitos)" minlength="8"/>
 			<button id="cadastro">Cadastrar</button>
 		</form>
 	</div>
@@ -29,7 +29,7 @@
 				<img src="login_icon.jpeg">
 			</div>
 			<input type="email" placeholder="Email">
-			<input type="password" placeholder="Senha" />
+			<input type="password" placeholder="Senha" minlength="8" />
 			<a href="#">Esqueceu sua senha?</a>
 			<button>Entrar</button>
 		</form>
