--- a/login/login.html
+++ b/login/login.html
@@ -16,8 +16,8 @@
 				<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a> -->
 				<img src="login_icon.jpeg">
 			</div>
-			<input type="text" id="nomeCompleto" onfocus="this.value='' placeholder="Nome completo" required/>
-			<input type="email" id="enderecoEmail" onfocus="this.value='' placeholder="Endereço de email" / required>
+			<input type="text" id="nomeCompleto" onfocus="this.value=''" placeholder="Nome completo" required/>
+			<input type="email" id="enderecoEmail" onfocus="this.value=''" placeholder="Endereço de email" / required>
 			<input type="password" placeholder="Senha (pelo menos 8 dígitos)" minlength="8"/ required>
 			<input type="checkbox" id="terms" name="terms1" value="Aceito" required> 
 			<label for="terms1"> Eu concordo com os termos de serviço e política de privacidade</label><br>
