Adicionei javascript no botão da página inicial

--- a/home/index.html
+++ b/home/index.html
@@ -23,7 +23,9 @@
   <div id="container">
     <header class="header">
       <h1>Inicie sua jornada de mentoria e trilhe caminhos extraordinários na Tecnologia.</h1>
-      <button>Encontre um mentor!</button>
+      <div id="res">
+      </div>
+      <button class="botaoClicar">Encontre um mentor!</button>
       <div class="header-stars">
         <div class="stars">
           <img src="assets/five-stars.png" alt="Avaliação">
@@ -63,5 +65,6 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d452699.6843090511!2d-48.75046105169988!3d-27.57131437626535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9527394eb2c632d7%3A0x81bc550b6a04c746!2sFlorian%C3%B3polis%2C%20State%20of%20Santa%20Catarina!5e0!3m2!1sen!2sbr!4v1630454517995!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
   </footer>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
